--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Bienvenidos al proyecto integraor de Argentina programa</h1>
+    <h1>Bienvenidos al proyecto integrador de Argentina programa</h1>
     <h2>#yoProgramo</h2>
 </body>
 </html>
